src/objects/APTS_ItemCategoryDetermination__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Kauri wave 3: Custom setting defined to determine item category for machines based on Type Of Contract/Charge Type/Net Price</description>
    <fields>
        <fullName>APTS_Charge_Type__c</fullName>
        <label>Charge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Item_Category__c</fullName>
        <label>Item Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Order_Type_List__c</fullName>
        <label>SAP Order Type List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Type_Of_Contract__c</fullName>
        <label>Type Of Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ZX10__c</fullName>
        <label>ZX10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YOCI_YOFT__c</fullName>
        <label>YOCI/YOFT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>APTS_ItemCategoryDetermination</label>
</CustomObject>